--- a/index.css
+++ b/index.css
@@ -35,6 +35,13 @@ h1{
     padding-bottom: 20px;
 }
 
+.text-wraper ol {
+    margin-top: 20px;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+}
+
 .clear{
     clear: both;
 }
